# ssh-guard

./: .env.example  .gitignore  .markdownlint.yaml  .markdownlint.yml  .pre-commit-config.yaml  .rustfmt.toml  ARCHITECTURE.md  BASHCONTROL.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  build.rs  clippy.toml  demo.tape  deny.toml  install.sh  ssh-guard
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  dependabot-automerge.yml  release.yml
config/: system-prompt-gating.md  system-prompt-paranoid.md  system-prompt-readonly.md  system-prompt-safe.md  system-prompt.md
ctf/: .gitignore  ADVERSARY.md  Containerfile.adversary  Containerfile.agent  Containerfile.local  Containerfile.remote  DESIGN.md  client.yaml  ctf-attacker-prompt.md  ctf-prompt.md  entrypoint-adversary.sh  entrypoint-agent.sh  entrypoint-local.sh  entrypoint-remote.sh  run-adversary.sh  run-claude-attack.sh  run.sh  scenarios.yaml  teardown.sh
ctf/gating/: Containerfile
deployment/systemd/: guard.env.example  guard.service  ssh-guard.env.example  ssh-guard.service
deployment/windows/: guard-launch.ps1  install-guard.ps1
docs/: API.md  REFERENCE.md  demo-script.sh  demo.cast  openapi.yaml
docs/examples/: api_examples.md
examples/: README.md  allow-policy.yaml  deny-policy.yaml  fallback-models.env  hybrid-policy.yaml  verbs-kubectl.yaml  verbs-readonly.yaml  verbs.yaml
hooks/: pre-commit  pre-push
scripts/: guard-market-pass.sh
scripts/git-hooks/: commit-msg
src/: audit.rs  cache.rs  cli.rs  client_config.rs  config.rs  credentials.rs  credstore.rs  env.rs  evaluate.rs  git_hook.rs  grant_rules.rs  injection.rs  learned_rules.rs  lib.rs  llm.rs  main.rs  mcp.rs  metrics.rs  optimizer.rs  plugin.rs  policy.rs  principal.rs  profile.rs  prompts.rs  provider.rs  proxy.rs  ratelimit.rs  rbac.rs  redact.rs  sdk.rs  secrets.rs  security.rs  server.rs  session.rs  session_store.rs  shim.rs  ssh.rs  streaming.rs  tool_config.rs  validate.rs  (+2 more)
src/gating/: approval.rs  deny_shape.rs  mod.rs  provisional.rs  verb.rs
src/providers/: claude.rs  mod.rs  openai.rs
src/proxy/: mod.rs  server.rs  tls.rs  upstream.rs
tests/: adversarial_attacks.yaml  attack-vectors-gpt5.yaml  blue-team-queries.yaml  ctf_scenarios.yaml  guard_tests.yaml  kube_proxy_integration.rs  mcp_integration.rs  policy_tests.rs  prompt_regression.rs  prompt_regression_corpus.yaml
