[package]
name = "ssh-guard"
version = "0.0.2"
edition = "2021"
description = "SSH wrapper that sends commands to an LLM for approval before execution"
authors = ["Mörgæsis <morgaesis+git@morgaes.is>"]
license = "MIT"
repository = "https://github.com/morgaesis/ssh-guard"

[lib]
name = "ssh_guard"
path = "src/lib.rs"

[[bin]]
name = "ssh-guard"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "macros", "process", "net", "io-util", "time", "fs", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"
tempfile = "3.8"
rpassword = "7.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1.0"
dotenvy = "0.15"
serde_yaml = "0.9"
dirs = "6.0"
shell-words = "1.0"
