[package]
name = "guard"
version = "0.1.0"
edition = "2021"
description = "LLM-evaluated command gate for AI agents"
authors = ["Mörgæsis <morgaesis+git@morgaes.is>"]
license = "MIT"
repository = "https://github.com/morgaesis/guard"

[lib]
name = "guard"
path = "src/lib.rs"

[[bin]]
name = "guard"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "macros", "process", "net", "io-util", "io-std", "time", "fs", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"
tempfile = "3.8"
rpassword = "7.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1.0"
dotenvy = "0.15"
serde_yaml = "0.9"
dirs = "5.0"
shell-words = "1.0"
