[package]
name = "guard"
version = "0.3.0"
edition = "2021"
description = "LLM-evaluated command gate for AI agents"
authors = ["Mörgæsis <morgaesis+git@morgaes.is>"]
license = "MIT"
repository = "https://github.com/morgaesis/guard"

[lib]
name = "guard"
path = "src/lib.rs"

[[bin]]
name = "guard"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["rt", "macros", "process", "net", "io-util", "io-std", "time", "fs", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"
tempfile = "3.8"
rpassword = "7.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1.0"
dotenvy = "0.15"
serde_yaml = "0.9"
dirs = "6.0"
shell-words = "1.0"
rand = "0.10.1"
rusqlite = { version = "0.40.0", features = ["bundled"] }
sha2 = "0.11.0"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12", "logging"] }
rcgen = { version = "0.14.8", default-features = false, features = ["ring", "pem", "crypto"] }
hyper = { version = "1.10.1", features = ["server", "client", "http1", "http2"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = ["tokio", "server", "http1", "http2", "client", "client-legacy"] }
base64 = "0.22.1"

[target."cfg(unix)".dependencies]
libc = "0.2.186"
uzers = "0.12.2"

[target."cfg(windows)".dependencies]
windows-service = "0.8.1"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_System_Pipes", "Win32_System_Threading", "Win32_Storage_FileSystem"] }
